RESOLVED FIXED 251146
[GStreamer][1.22] webrtc/receiver-track-should-stay-live-even-if-receiver-is-inactive.html crashing
https://bugs.webkit.org/show_bug.cgi?id=251146
Summary [GStreamer][1.22] webrtc/receiver-track-should-stay-live-even-if-receiver-is-...
Philippe Normand
Reported 2023-01-25 05:13:38 PST
(gdb) bt #0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44 #1 0x00007f77376911f3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78 #2 0x00007f773763f00e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #3 0x00007f77376287fc in __GI_abort () at abort.c:79 #4 0x00007f7737ce8b43 in g_assertion_message (domain=<optimized out>, file=0x7f76e078beb7 "../ext/webrtc/webrtcsdp.c", line=<optimized out>, func=<optimized out>, message=<optimized out>) at ../glib/gtestutils.c:3253 #5 0x00007f7737d441a7 in g_assertion_message_expr (domain=domain@entry=0x0, file=file@entry=0x7f76e078beb7 "../ext/webrtc/webrtcsdp.c", line=line@entry=495, func=func@entry=0x7f76e078e890 <__func__.6> "_get_final_direction", expr=expr@entry=0x0) at ../glib/gtestutils.c:3279 #6 0x00007f76e077abcf in _get_final_direction (remote_dir=GST_WEBRTC_RTP_TRANSCEIVER_DIRECTION_NONE, local_dir=GST_WEBRTC_RTP_TRANSCEIVER_DIRECTION_NONE) at ../ext/webrtc/webrtcsdp.c:495 #7 _update_transceiver_from_sdp_media (error=0x7f74d27fb9e0, bundle_idx=<optimized out>, bundled=<optimized out>, rtp_trans=0x1a0b480, stream=<optimized out>, media_idx=0, sdp=<optimized out>, webrtc=<optimized out>) at ../ext/webrtc/gstwebrtcbin.c:5645 #8 _update_transceivers_from_sdp (error=0x7f74d27fb9e0, sdp=<optimized out>, source=<optimized out>, webrtc=<optimized out>) at ../ext/webrtc/gstwebrtcbin.c:6121 #9 _set_description_task (webrtc=<optimized out>, sd=<optimized out>) at ../ext/webrtc/gstwebrtcbin.c:6490 #10 0x00007f76e076b84d in _execute_op (op=0x1e39db0) at ../ext/webrtc/gstwebrtcbin.c:1161 #11 0x00007f7737d20c37 in g_main_dispatch (context=0x7f74bc000b70) at ../glib/gmain.c:3419 #12 g_main_context_dispatch (context=0x7f74bc000b70) at ../glib/gmain.c:4137 #13 0x00007f7737d77028 in g_main_context_iterate.constprop.0 (context=0x7f74bc000b70, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4213 #14 0x00007f7737d202af in g_main_loop_run (loop=0x7f74bc0024f0) at ../glib/gmain.c:4413 #15 0x00007f76e076b75e in _gst_pc_thread (webrtc=0x1e50410) at ../ext/webrtc/gstwebrtcbin.c:1087 #16 0x00007f7737d50722 in g_thread_proxy (data=0x1c5dde0) at ../glib/gthread.c:827 #17 0x00007f773768f1da in start_thread (arg=<optimized out>) at pthread_create.c:442 #18 0x00007f7737717f44 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Philippe Normand
Comment 1 2023-02-28 08:26:43 PST
EWS
Comment 2 2023-03-01 03:39:48 PST
Committed 260996@main (d6668df3100e): <https://commits.webkit.org/260996@main> Reviewed commits have been landed. Closing PR #10800 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-03-01 03:40:17 PST
Note You need to log in before you can comment on or make changes to this bug.