Cherry-pick 260996@main (d6668df3100e). https://bugs.webkit.org/show_bug.cgi?id=251146

[GStreamer][1.22] webrtc/receiver-track-should-stay-live-even-if-receiver-is-inactive.html crashing
    https://bugs.webkit.org/show_bug.cgi?id=251146

    Reviewed by Xabier Rodriguez-Calvar.

    The crash was due to webrtcbin detecting an invalid SDP message, containing 2 RTP direction
    attributes instead of one. So we now remove attributes unrelated with codec preferences, potentially
    leading to internal webrtcbin confusions such as duplicated RTP direction attributes for instance.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerRtpTransceiverBackend.cpp:
    (WebCore::GStreamerRtpTransceiverBackend::setDirection):
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
    (WebCore::capsFromSDPMedia):

    Canonical link: https://commits.webkit.org/260996@main